[tool.autopep8]
max_line_length = 120
ignore = "E501,E266,E402"
# E501: Line to long ((length) > 79 characters)
# E266: Too many leading '#' for block comment
# E402: Module level import not at top of file


[tool.poetry]
name = "esapy"
version = "2.0.1"
authors = ["Kosuke Mizuno <dotmapu@gmail.com>"]
description = "Upload jupyter notebook for your wiki. Suported wiki: esa.io and growi."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/KosukeMizuno/esapy"

exclude = ["trial/*"]


[tool.poetry.scripts]
esa = 'esapy.entrypoint:main'


[tool.poetry.dependencies]
python = ">=3.4"
pyyaml = "*"
requests = "*"
gitpython = "*"


[tool.poetry.dev-dependencies]
pytest = "*"
pydocstyle = "*"
pycodestyle = "*"
autopep8 = "*"
jupyter = "*"
ipython = ">=6"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
